--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:tengheong.ng@gmail.com  
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:linkedin.com/tengheongng
   pinterest:
@@ -47,7 +47,7 @@ url:tengheong.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "tengheong.github.io-post"
+baseurl: 
 
 #
 # !! You don't need to change any of the configuration flags below !!
