--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:tengheong.ng@gmail.com  
+  email: tengheong.ng@gmail.com  
   facebook:
   flickr:
   github: 
   instagram:
-  linkedin:linkedin.com/tengheongng
+  linkedin: linkedin.com/in/tengheongng
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:tengheong.github.io
+url: tengheong.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
