--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Teng Heong Ng
 description: Blogs about GIS, Cartography, and Urban Planning
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: "images/profile.jpg"
 
 #
 # Flags below are optional
